--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: jonchar
-email: jonchar@domain.com
+email: jonthechar@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Home of jonchar.
 baseurl: "" # the subpath of your site, e.g. /blog/
