--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: jonchar
+title: Jon's Tech Blog
 email: jonthechar@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Home of jonchar.
