Add linkedin profile link.

--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -14,7 +14,7 @@ social:
   twitter: joncharest 
   #facebook: 
   #tumblr: 
-  #linkedin: 
+  linkedin: jonchar 
   #gplus: 
   #gravatar: 
   #flickr: 
